Made changes to all route files
Changes made: Error correction, JWT Auth and fixed update attendance endpoint (Both graph and api code)

--- a/config.dev.cfg
+++ b/config.dev.cfg
@@ -1,6 +1,6 @@
 [azure]
 clientId = aee2e4b1-6610-447a-805b-e3f28994bf67
-clientSecret = mOm8Q~0Vr5Y3Sa2Tjjz3saWs71GXzPrs8DCR5cM7
+clientSecret = Msu8Q~Emei17Kj6LV35HPX~hc.G5_rvJIdHwtcbX
 tenantId = 3433e2f6-b674-4206-857c-124c3fcfead0
 stu_dir_app = 0a09fe4e-efd0-4779-8b49-f80aaaecb550
 stu_dir_obj = b8b12497-c052-45e8-a5c7-16720a70ff86
