--- a/requirements.txt
+++ b/requirements.txt
@@ -67,7 +67,7 @@ matplotlib==3.7.2
 numpy==1.25.1
 pandas==2.0.3
 Pillow==10.0.0
-pydantic==1.10.11
+pydantic==2.6.2
 pyparsing==3.0.9
 python-dotenv==1.0.0
 python-multipart==0.0.6
@@ -82,6 +82,6 @@ websockets==11.0.3
 jwcrypto
 openai
 python-jose
-semantic-kernel
+semantic-kernel==0.5.1.dev0
 fuzzywuzzy
 python-Levenshtein
