--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,7 @@ urllib3==2.1.0
 wrapt==1.16.0
 yarl==1.9.4
 zipp==3.17.0
-azure-functions
+azure-functions==1.17.0
 async-timeout==4.0.2
 azure-cosmos==4.5.0
 click==8.1.5
@@ -73,15 +73,15 @@ python-dotenv==1.0.0
 python-multipart==0.0.6
 pytz==2023.3
 PyYAML==6.0
-starlette==0.27.0
+starlette==0.36.3
 tzdata==2023.3
 uritemplate==4.1.1
 uvicorn==0.22.0
 watchfiles==0.19.0
 websockets==11.0.3
-jwcrypto
-openai
-python-jose
+jwcrypto==1.5.0
+openai==1.7.2
+python-jose==3.3.0
 semantic-kernel==0.5.1.dev0
-fuzzywuzzy
-python-Levenshtein
+fuzzywuzzy==0.18.0
+python-Levenshtein==0.25.0
